# problem-finder

./: .env.example  .gitignore  README.md  pyproject.toml
config/: full.yaml  pilot.yaml
docs/superpowers/plans/: 2026-07-01-reddit-problem-finder.md
docs/superpowers/specs/: 2026-07-01-reddit-problem-finder-design.md
src/problem_finder/: cli.py  cluster.py  collect.py  collect_public.py  config.py  db.py  extract.py  gemini.py  report.py  score.py
src/problem_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_cluster.py  test_collect.py  test_collect_public.py  test_config.py  test_db.py  test_extract.py  test_gemini.py  test_report.py  test_score.py
