[project]
name = "problem-finder"
version = "0.1.0"
description = "Mine Reddit for recurring, unsolved problems"
requires-python = ">=3.11"
dependencies = [
    "praw>=7.7",
    "google-genai>=1.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pf = "problem_finder.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
